30-openwebui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: solunea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:main
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: solunea
spec:
  type: ClusterIP
  selector:
    app: open-webui
  ports:
    - port: 80
      targetPort: 8080
