31-openwebui-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-nodeport
  namespace: solunea
spec:
  type: NodePort
  selector:
    app: open-webui
  ports:
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 30089
